styles/login/layout.css
body {
    background-color: #f6f7f8;
}

.splash__logo {
    position: fixed;
    top: 50%;
    left: 50%;
    z-index: 9999;
    width: 274px;
    height: auto;
    animation: splash__logo--animation 500ms 200ms ease-in-out forwards;
    transform: translate(-50%, -50%);
}

.splash__logo--image {
    width: 100%;
}

.main-content--signup-logo {
    position: fixed;
    top: 80px;
    left: 77px;
    z-index: 10;
    width: 100px;
}

.main-content {
    position: relative;
    width: 100%;
    max-width: 1440px;
    margin: 0 auto;
    opacity: 0;
    pointer-events: none;
    transition: opacity 1000ms;
}

.main-content--signup {
    position: relative;
    width: 100%;
    max-width: 1440px;
    margin: 0 auto;
    opacity: 1;
}

.main-content.main-content--opacity {
    opacity: 1;
    pointer-events: all;
}

.header__flex-instructions {
    z-index: 2;
    width: 100%;
    display: flex;
    justify-content: flex-end;
}

.login__signup {
    position: absolute;
    top: 0;
    right: 0;
    padding: 80px 77px;
    display: flex;
    align-items: center;
    gap: 35px;
}

.main-content main,
.main-content--signup main {
    width: 100%;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

.login__window {
    padding: 48px 115px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
    border-radius: 30px;
    filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.1));
    background-color: #fff;
}

.login__headline {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 12px;
}

.login__headline--line {
    width: 150px;
}

.login__legalInformation--area {
    position: absolute;
    bottom: 64px;
    width: 100%;
    display: flex;
    justify-content: center;
    gap: 35px;
}

.login__legalInformation {
    line-height: 24px;
    color: #cdcdcd;
    min-height: 24px;
    display: flex;
    align-items: center;
    box-sizing: border-box;
    transition: all 125ms;
}

.login__legalInformation:hover {
    color: #29abe2;
    text-shadow: 0.7px 0 0 #29abe2;
    cursor: pointer;
}

@keyframes splash__logo--animation {
    0% {
        top: 50%;
        left: 50%;
        width: 274px;
        transform: translate(-50%, -50%);
    }

    100% {
        top: 80px;
        left: 77px;
        width: 100px;
        transform: translate(0, 0);
    }
}

@media (min-width: 1441px) {
    .main-content--signup-logo {
        left: calc((100vw - 1440px) / 2 + 77px);
    }

    @keyframes splash__logo--animation {
        0% {
            top: 50%;
            left: 50%;
            width: 274px;
            transform: translate(-50%, -50%);
        }

        100% {
            top: 80px;
            left: calc((100vw - 1440px) / 2 + 77px);
            width: 100px;
            transform: translate(0, 0);
        }
    }
}

